standards/gnds-2.0-alpha/alpha/c/src/v2.0/sfy/Intensity.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Intensity is the basic handle type in this file. Example:
//    // Create a default Intensity object:
//    Intensity handle = IntensityDefault();
// Functions involving Intensity are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_SFY_INTENSITY
#define C_INTERFACE_ALPHA_V2_0_SFY_INTENSITY

#include "GNDStk.h"
#include "v2.0/common/Uncertainty.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct IntensityClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Intensity
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct IntensityClass *Intensity;

// --- Const-aware handles.
typedef const struct IntensityClass *const ConstHandle2ConstIntensity;
typedef       struct IntensityClass *const ConstHandle2Intensity;
typedef const struct IntensityClass *      Handle2ConstIntensity;
typedef       struct IntensityClass *      Handle2Intensity;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstIntensity
IntensityDefaultConst();

// +++ Create, default
extern_c Handle2Intensity
IntensityDefault();

// --- Create, general, const
extern_c Handle2ConstIntensity
IntensityCreateConst(
   const double value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Create, general
extern_c Handle2Intensity
IntensityCreate(
   const double value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
IntensityAssign(ConstHandle2Intensity This, ConstHandle2ConstIntensity from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
IntensityDelete(ConstHandle2ConstIntensity This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
IntensityRead(ConstHandle2Intensity This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
IntensityWrite(ConstHandle2ConstIntensity This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
IntensityPrint(ConstHandle2ConstIntensity This);

// +++ Print to standard output, as XML
extern_c int
IntensityPrintXML(ConstHandle2ConstIntensity This);

// +++ Print to standard output, as JSON
extern_c int
IntensityPrintJSON(ConstHandle2ConstIntensity This);


// -----------------------------------------------------------------------------
// Metadatum: value
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
IntensityValueHas(ConstHandle2ConstIntensity This);

// +++ Get
// +++ Returns by value
extern_c double
IntensityValueGet(ConstHandle2ConstIntensity This);

// +++ Set
extern_c void
IntensityValueSet(ConstHandle2Intensity This, const double value);


// -----------------------------------------------------------------------------
// Child: uncertainty
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
IntensityUncertaintyHas(ConstHandle2ConstIntensity This);

// --- Get, const
extern_c Handle2ConstUncertainty
IntensityUncertaintyGetConst(ConstHandle2ConstIntensity This);

// +++ Get, non-const
extern_c Handle2Uncertainty
IntensityUncertaintyGet(ConstHandle2Intensity This);

// +++ Set
extern_c void
IntensityUncertaintySet(ConstHandle2Intensity This, ConstHandle2ConstUncertainty uncertainty);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/sfy/Intensity/src/custom.h"

#undef extern_c
#endif